# finance-parser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
finance-parser/: cleaners.py  gpay_parser.py  main.py  parsers.py  utils.py
finance_parser/: canara_parser.py  gpay_parser.py  main.py
finance_parser/utils/: privacy.py
src/finance_parser/: canara_parser.py  gpay_parser.py  main.py
src/finance_parser/utils/: privacy.py
