[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-parser"
version = "0.0.1"
description = "CLI tool to parse bank statements into structured data"
readme = "README.md"
authors = [{ name = "Cozmek" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "camelot-py[cv]",
    "pandas",
    "tabulate"
]

[project.scripts]
finance-parser = "finance_parser.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["finance_parser"]
