[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-parser"
version = "0.0.1"
description = "CLI tool to parse bank statements into structured data"
readme = "README.md"
authors = [{ name = "Riyas BinUmer" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "camelot-py[cv]>=1.0.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0"
]

[project.scripts]
finance-parser = "finance_parser.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["finance_parser"]
